--- a/english/word/low-frequency/019-024.md
+++ b/english/word/low-frequency/019-024.md
@@ -29,10 +29,10 @@
     - adj. 可追踪的
 - imperative
     - n. 重要紧急的事；当务之急
-    - adj.
+    - adj. 重要紧急的
     - == important
     - It is absolutely **imperative** that we finish by next week.
-- anchor
+- anchor [ˈæŋkər]
     - n. 节目主持人
 - unthinkingly
     - adv. 不假思索地
@@ -43,9 +43,9 @@
     - Bad times can make you **bitter** or better.
 - directive
     - adj. 指示的
-- repel
+- repel [rɪˈpel]
     - vt. 使厌恶；驱逐
-- moan 😔
+- moan [moʊn] 😔
     - v. 抱怨
     - n. 抱怨
 
@@ -56,14 +56,14 @@
     - mutually understanding 相互理解
 - insensitivity
     - n. 不灵敏
-- affirmation
+- affirmation [ˌæfɚˈmeʃən]
     - n. 肯定
-    - affirm vt. 肯定属实；申明
-    - reaffirm
+    - affirm [əˈfɜːrm] vt. 肯定属实；申明
+    - reaffirm [ˌriəˈfɜrm]
         - vt. 重申
         - == restate
     - skepticism [ˈskɛptɪˌsɪzəm] n. 怀疑主义；怀疑态度 😔
-- neurology
+- neurology [nʊˈrɑlədʒi]
     - n. 神经病学，神经学
     - neuroligist n. 神经病学家，神经学家
     - neurological adj. 神经系统的
@@ -79,24 +79,24 @@
 - intentional
     - adj. 故意的
 - prominence [ˈprɑːmɪnəns]
-    - n. 出名
+    - n. 出名；重要
     - == importance n. 重要性
-- communist
+- communist [ˈkɑːmjənɪst]
     - adj. 共产主义的
     - class struggles 阶级斗争
     - The site of the First National Congress of the <ins>**Communist** Party of China</ins> is located at No.76, Xingye
-      Rode in Shanghai,a typical Shanghai-style residence built in the autumn of 1920.
+      Rode in Shanghai, a typical Shanghai-style residence built in the autumn of 1920.
       中国共产党第一次全国代表大会会址位于上海兴业路76号，是一栋典型的上海式住宅，建于1920年秋。
-- logicality
+- logicality [ˌlɒdʒɪ'kælətɪ]
     - n. 逻辑性
-    - logician n. 逻辑学家
+    - logician [loˈdʒɪʃən] n. 逻辑学家
 - noneconomic
     - adj. 非经济的
 - associative
     - adj. 联想的
-- dilute
+- dilute [daɪˈluːt]
     - vt. 稀释
-- miserably
+- miserably [ˈmɪzərəblɪ]
     - adv. 贫困地
     - miserable adj. 痛苦的；令人不快的
 - outrage
@@ -112,9 +112,9 @@
 
 - compose
     - vt. 撰写
-- composite
+- composite [kəmˈpɑːzət]
     - n. 合成物
-- donation
+- donation [doʊˈneɪʃn]
     - n. 捐赠物
 - commonplaceness
     - n. 平常的事
@@ -122,7 +122,7 @@
     - n. 忍耐力
 - postmodern
     - adj. 后现代的
-- terrifying
+- terrifying [ˈterɪfaɪɪŋ]
     - adj. 令人恐惧的
 - respondent
     - n. （尤指）调查对象
@@ -134,29 +134,29 @@
 
 ## 023
 
-- ideological
+- ideological [ˌaɪdiəˈlɑdʒɪkəl]
     - adj. 思想上的
 - infrequent
     - adj. 不经常发生的
 - substance
     - n. 物质
-- hurriedly
+- hurriedly [ˈhəɪdlɪ]
     - adv. 匆忙地
-- blossom
+- blossom [ˈblɑːsəm]
     - vi. 成功发展
     - == flourish [ˈflɜːrɪʃ] vi. 繁荣，兴旺；茁壮成长
-- imaginable
+- imaginable [ɪˈmædʒənəbəl]
     - adj. 可想象的
 - advancement
     - n. 发展
     - == development n. 发展；开发
     - with the advancement/development of
-- numerous
+- numerous [ˈnuːmərəs]
     - adj. 许多的
     - == many
-- preferably
+- preferably [ˈprɛfərəblɪ]
     - adv. 最好是
-- crystallise/crystallize
+- crystallize [ˈkrɪstəˌlaɪz]
     - v. 使明确
     - crystal [ˈkrɪstl]
         - n. 结晶，晶体; 水晶（玻璃）；钻石
@@ -168,38 +168,41 @@
     - v. 使坚固
 - incorporate
     - vt. 将...包括在内
-    - ncorporate sth. into sth.
     - == include
-- commemorate
+    - incorporate sth. into sth.
+- commemorate [kəˈmeməreɪt]
     - vt. 纪念
-- nutrient
+- nutrient [ˈnuːtriənt]
     - n. 养分
-- breathe
+- breathe [briːð]
     - v. 呼吸
-    - breath
+    - breath [breθ]
         - n. 呼吸
         - take a deep breath 深呼吸
-- sew
+- sew [soʊ]
     - v. 缝
-- reproductive
+- reproductive [ˌriprəˈdʌktɪv]
     - adj. 生殖的
-- intrinsically
+- intrinsically [ɪnˈtrɪnsɪklɪ]
     - adv. 本质的
-- mobilise/mobilize
+- mobilize [ˈmoʊbəlaɪz]
     - v. 鼓动
-- disposable
+- disposable [dɪˈspoʊzəbl]
     - adj. 一次性的
 
 ## Words
 
-- despise
+- despise [dɪˈspaɪz]
     - vt. 鄙视
 - reserve
     - vt. 保留；预定
     - n. ...保护区；...储备量
-- rescale
-- hindrance
-- resemblance
+- rescale [ri'skeɪl]
+    - v. 重新调节
+- hindrance [ˈhɪndrəns]
+    - n. 阻碍，妨碍; 障碍物
+- resemblance [rɪˈzembləns]
+    - n. 相似，形似; 外表，外观
 
 ## 词组
 
