--- a/english/word/low-frequency/025-030.md
+++ b/english/word/low-frequency/025-030.md
@@ -19,15 +19,15 @@
 
 ## 025
 
-- disposal
+- disposal [dɪˈspoʊzl]
     - n. 处理
     - trash disposal 废物处理
     - garbage disposal 垃圾处理
-- filer
+- filer [ˈfaɪlər]
     - n. 提起诉讼者
 - visionary
     - n. 有远见卓识的人
-    - A spirit with a vision is a dream with a mission.
+    - A *spirit(n. 精神)* with a vision is a dream with a mission.
 - implicitly
     - adv. 含蓄的
     - implicit
@@ -37,7 +37,7 @@
           married, but it's probably better to talk it through.
         - explicit
             - adj. 明确的
-            - he gave me very **explicit** directions on how to get there.
+            - He gave me very **explicit** directions on how to get there.
 - reliability
     - n. 可靠性
     - unreliability n. 不可靠性
@@ -47,7 +47,8 @@
     - simple adj. 简单的; 单纯的; 朴素的
 - interviewee
     - n. 参加面试者
-    - The question was vague, giving the **interviewee** enough rope to hang herself. 这个问题模棱两可，让面试者胡乱发挥而自毙吧。
+    - The question was *vague(adj. 含糊的)*, giving the **interviewee** enough *rope([roʊp] n. 绳索)* to hang herself.
+      这个问题模棱两可，让面试者胡乱发挥而自毙吧。
     - -ee 被动
         - employee n. 雇员
     - -er 主动
@@ -56,11 +57,14 @@
     - interview
         - vt. 采访
         - n. 面试；采访
-- boldness
+- boldness ['boʊldnɪs]
     - n. 勇气
-    - Be bold, be courageous, be your best.
-        - bold == courageous == brave
-    - **Boldness** — a willingness to extend yourself to the extreme, is not one that can be acquired overnight.
+    - Be bold, be *courageous([kəˈreɪdʒəs] adj. 勇敢的，无畏的)*, be your best.
+        - bold
+            - adj. 勇敢的
+            - == courageous == brave
+    - **Boldness** — a willingness to extend yourself to the extreme, is not one that can be *acquired(vt. 获得)*
+      overnight.
 
 ## 026
 
@@ -76,58 +80,58 @@
 - vacancy
     - n. （职位）空缺
     - The **vacancy** has already been filled.
-- intimidate
+- intimidate [ɪnˈtɪmɪdeɪt]
     - vt. 威胁
     - == threaten
     - "You have no right to **intimidate** this man", Alison continued.
     - intimidation n. 恐吓
-- therapy
+- therapy [ˈθerəpi]
     - n. 治疗
-    - therapist n. 治疗专家
+    - therapist [ˈθerəpɪst] n. 治疗专家
 
 ## 027
 
-- terrific
+- terrific [təˈrɪfɪk]
     - adj. 极好的
-    - terrible - adj. **糟糕的**；极度的；可怕的
+    - terrible adj. 糟糕的；极度的；可怕的
     - We had a **terrific** start to the season, but recently we've been inconsistent.
-- disassemble
+- disassemble [ˌdɪsəˈsɛmbəl]
     - vt. 拆卸
     - assemble v. 集合；收集
-- beam
+- beam [biːm]
     - vi. 绽放笑容
     - beaming + n.（face/smile/eyes）
-    - With **beaming** eyes,the child looked at the kind gentleman who had always been so good to her.
-- strip
+    - With **beaming** eyes, the child looked at the kind gentleman who had always been so good to her.
+- strip [strɪp]
     - vt. 剥去
-- meaningfully
+- meaningfully [ˈmiːnɪŋfəli]
     - adv. 有意义地
-    - meaningless adj. 无价值的
-- cruise
+    - meaningless [ˈminɪŋlɪs] adj. 无价值的
+- cruise [kruːz]
     - vi. 巡航
-- unfeasible
+- unfeasible [ʌnˈfiːzəbl]
     - adj. 不可行的
     - The weather made it **unfeasible** to be outdoors.
     - feasible adj. 可行的
-- scenery
+- scenery [ˈsiːnəri]
     - n. 风景
 - attributable
     - adj. 可归因于...的
-    - be attributable to 可归因于；可能由于
     - Their illnesses are **attributable** to a poor diet.
-    - attribute to 归因于
+        - be attributable to 可归因于；可能由于
+        - attribute to 归因于
 
 ## 028
 
-- toil
+- toil [tɔɪl]
     - vi. （长时间）苦干
-    - == hardwork
+    - == handwork
     - I have nothing to offer but blood, **toil**, tears and sweat.
 - administrator
     - n. 管理人员
-- lodging
+- lodging  [ˈlɑːdʒɪŋ]
     - n. 寄宿
-- cherish
+- cherish [ˈtʃerɪʃ]
     - vt. 珍惜
     - == value
     - **Cherish** every moment with those you love at every stage of your journey.
@@ -136,68 +140,70 @@
 - mindless
     - adj. 无头脑的
     - == foolish adj. 愚蠢的；荒谬的
-- illuminate
+- illuminate [ɪˈluːmɪneɪt]
     - vt. 阐明；照亮
+    - Yet its report may well set back reform by *obscuring(v. 使...模糊，蒙蔽)* the depth and breath of the challenge
+      that Congress asked it to **illuminate**.
+        - set back 阻碍
+            - == delay == hinder
     - illumination
         - n. 阐明
         - == clarification [ˌklærəfəˈkeʃən] n. 阐明，澄清
             - clarify v. 阐明
-    - Yet its report may well set back reform by obscuring the depth and breath of the challenge that Congress asked it
-      to **illuminate**.
-- uncontrolled
+- uncontrolled [ˌʌnkənˈtroʊld]
     - adj. 不受控制的
-    - controllable adj. 可控制的
+    - controllable [kənˈtroʊləbl] adj. 可控制的
     - uncontrollable adj. 无法控制的
-- pepper
+- pepper [ˈpepər]
     - vt. 用...不断打击某人
 
 ## 029
 
-- permeate
+- permeate [ˈpɜːrmieɪt]
     - v. 弥漫
-    - Water will easily **permeate** a cotton dress.
+    - Water will easily **permeate** a *cotton([ˈkɑːtn] n. 棉花)* dress.
     - Statistics **permeate** modern life.
-- grader
+- grader ['ɡreɪdər]
     - n. ...年级的学生
-- appraisal
+- appraisal [əˈpreɪzl]
     - n. 评估
     - staff appraisal 员工评估体系
-- emigrant
+- emigrant [ˈemɪɡrənt]
     - n. 移民
     - emigration n. 移民（进，相较于本国）
     - immigrant n. 移民（外，相较于本国）
 - mixture
     - n. 混合
-- theft
+- theft [θeft]
     - n. 盗窃罪
-- striking
+- striking [ˈstraɪkɪŋ]
     - adj. 引人注目的
-    - **Striking** workers halted production at the auto plant yesterday.
+    - **Striking** workers *halted(v. 使停止)* production at the auto plant yesterday.
     - He was very **striking** but in some way I felt *repelled(v. 使厌恶; 排斥)*.
-- rediscover
+- rediscover [ˌriːdɪˈskʌvər]
     - vt. 重新发现
-- giggle
+- giggle [ˈɡɪɡl]
     - vi. 咯咯笑；傻笑
 
 ## 030
 
-- sue
+- sue [suː]
     - v. 控告
-- investigator
+- investigator [ɪnˈvestɪɡeɪtər]
     - n. 调查者
 - runaway
-    - // TODO n. 迅猛发展而难以控制的；逃跑
-- wilderness
+    - adj. 迅猛发展而难以控制的；逃跑的
+- wilderness [ˈwɪldərnəs]
     - n. 荒野
-- spectacle
+- spectacle [ˈspektəkl]
     - n. [pl.]眼镜；奇观；精彩的表演
-- intellectualise/intellectualize
+- intellectualize [ˌɪntlˈɛktʃuəˌlaɪz]
     - 使理智化
-- applaud
+- applaud [əˈplɔːd]
     - vt. 称赞
-- terror
+- terror [ˈterər]
     - n. 恐怖主义
-    - terrorism n 恐怖主义
+    - terrorism [ˈtɛrəˌrɪzəm] n 恐怖主义
     - terrorist
         - n. 恐怖主义者
         - The crash of EgyptAir Flight 804, which **terrorists** may have downed over the Mediterranean Sea, provides
@@ -205,11 +211,11 @@
 
 ## Words
 
-- exaggerated
+- exaggerated [ɪɡˈzædʒəreɪtɪd]
     - adj. 夸大的，言过其实的; 过大的，逾常的
-- timid
+- timid [ˈtɪmɪd]
     - adj. 胆小的; 羞怯的; 怕人; 羞手羞脚
-- liquidity
+- liquidity [lɪˈkwɪdɪti]
     - n. 流动性; 流动资金; 资产流动性
 
 ## 词组
