--- a/english/word/low-frequency/031-036.md
+++ b/english/word/low-frequency/031-036.md
@@ -25,17 +25,20 @@
     - adv. 坚持地
 - wrap
     - v. 包
-    - wrap up
-    - NATO defense ministers wrap up their meeting in Brussels today.
+    - NATO defense ministers **wrap** up their meeting in Brussels today.
+        - wrap up 结束
+            - == finish == conclude
 - embark
     - v. 着手
-    - embark on 从事
-    - Some forethought and preparation is necessary before you embark on the project.
+    - Some forethought and preparation is necessary before you **embark** on the project.
+        - embark on 从事
 - manual
     - n. 小册子
+    - adj. 体力的；用手的
 - stir
     - n. 愤怒（情绪）
-    - I've found quite a few,and — since I started posting them on Twitter — they have been causing quite a stir
+    - vt. 激发；搅拌
+    - I've found quite a few, and—since I started posting them on Twitter—they have been causing quite a **stir**.
 - transferable
     - adj. 可转移的
 - expectancy
@@ -43,7 +46,7 @@
 - plea
     - n. 恳求
 - dissolve
-    - v. 使溶解
+    - v. （使）溶解
 
 ## 032
 
@@ -54,31 +57,171 @@
 - vicious 😔
     - adj. 恶性的
 - endorse 🙂
-    - vt. (正式)赞同
-    - I wholeheartedly endorse his remarks.
+    - vt. （正式）赞同
+    - I wholeheartedly **endorse** his remarks.
 - cloak
     - vt. 掩盖
-    - They left under the clock of darkness.
+    - n. 掩盖物；披风
+    - They left under the **clock** of darkness.
 - electronically
     - adv. 用电子方法
 - generalist
     - n. 通才（各个领域都会）
-    - In this age of generalists，it pays to have specific knowledge or skills.
-    - specialist 特长
+    - In this age of **generalists**, it pays to have specific knowledge or skills.
+    - specialist
+        - n. 专家
+        - adj. 专业的
 - digitalized
     - adj. 数字化的
 - forecaster
     - n. 预测者
 - descend
     - v. 下来
-        - fall
-        - decrease
-    - ascend 上升
-        - rise
-        - increase
+    - == fall == decrease
+    - ascend
+        - v. 上升，登高; 升职
+        - == rise == increase
+
+## 033
+
+- bypass
+    - vt. 避开
+    - == avoid vt. 避免；躲避
+- census
+    - n. 人口普查
+- uncover
+    - vt. 发现
+- oriental
+    - adj. 东方的
+- allegation
+    - n. 指控
+- rough
+    - adj. 大致的
+    - The **rough** guide to marketing success used to be that you got what you paid for. 过去，市场营销成功的大略指南是“一分钱一分货”
+- bedrock
+    - n. 基础
+- refusal
+    - n. 拒绝
+- dishonesty
+    - n. 不诚实
+- explainable
+    - adj. 可说明的
+
+## 034
+
+- remold
+    - vt. 重塑
+    - == reshape v. 重塑；改组
+- clarify
+    - vt. 阐明
+- approachable
+    - adj. 平易近人的
+    - Despite being a big star, she's very **approachable**.
+    - Opposite: formidable adj. 令人敬畏的
+        - He is very formidable; How could anybody be so brave as to offend him?
+    - approach
+        - v. 接近
+        - vt. 与...接洽；处理
+        - n. 方法
+        - == address
+        - with sth. approaching
+- countless
+    - adj. 无数的
+- inflationary
+    - adj. 膨胀的
+    - inflation n. 通货膨胀（率）
+- inescapably
+    - adv. 不可避免的
+    - escape
+        - vi. 逃跑
+        - vt./n. 逃避，逃离
+- analytically
+    - adv. 分析地
+    - analytics n. 分析方法
+    - economics n. 经济学
+- detection
+    - n. 察觉
+    - detector n. 探测器
+    - detect vt. 察觉
+
+## 035
+
+- baseless 😔
+    - adj. 无根据的
+- relationally
+    - adv. 有关系地
+    - rationally adv. 理性地
+- troublesome
+    - adj. 引起麻烦的
+    - troublemaker n. 惹麻烦的人
+    - burdensome adj. 繁重的，烦累的，难以承担的; 累赘
+- regenerative
+    - adj. 再生的
+    - **Regenerative** products could be a hard sell because the concept is tough to define quickly...
+- impart
+    - vt. 传授
+    - A good teacher knows that the duty shouldered is not just to **impart** knowledge to students; a good teacher
+      profoundly feels that the teaching work is not just to give lectures. 好的教师指导他们的职责不单是向学生灌输知识，他们深刻体会到教学工作不只是授课
+- involuntarily
+    - adv. 非自愿地
+- regularity
+    - n. 规律性
+- unjust
+    - adj. 不公正的
+    - You are **unjust**.
+- unmentioned
+    - adj. 未提到的
+
+## 036
+
+- wreck
+    - n. 失事
+- disclosure
+    - n. 公开
+- statesman
+    - n. 政治家
+- accusation
+    - n. 控告
+    - accuse sb. of sth. 指责某人某事
+        - == charge sb. with sth.
+- intimation
+    - n. 暗示
+- outset
+    - n. 开始
+    - onset
+        - n. （尤指某种事情的）开始，发作；军事攻击
+        - When something is at its **onset**, it's at the beginning, just getting started, and it's often something
+          that's **not so pleasant**.
+    - 词组
+        - at the outset 开始
+            - == at/in the beginning of
+        - from the outset 从一开始
+    - Decide at the **outset** what kind of learning programme you want to follow.
+    - The **onset** of hurricane season is probably not the best time to visit the beach.
+- thrill
+    - n. 刺激
+- passionately
+    - adv. 充满热情的
+- slum
+    - n. 贫民窟
+- particularist
+    - adj. 排他主义的
+    - == exclusive adj. 独有的；相互排斥的；高级的
+    - inclusive adj. 包容性强的；包括的
+    - particular adj. 特指的；特殊的；尤其的
 
 ## Words
+
+- declare
+    - v. 宣称; 表明; 断言; 公布; 申报; （在击球员还未全部出局时）宣布结束赛局
+- favor
+    - n. 赞同，支持; 帮助; 偏袒
+    - v. 更喜爱; 偏袒; 有利于; 长得像
+- soothe [suːð]
+    - vt. 安慰; 缓和; 使平静; 减轻痛苦
 
 ## 词组
 
 ## 句式
+
+- Like is like a garden, you reap what you sow.
