--- a/english/word/low-frequency/007-012.md
+++ b/english/word/low-frequency/007-012.md
@@ -90,8 +90,8 @@
         - I have some **sympathy** with this <ins>point of view(观点)</ins>.
 - hedge [hedʒ]
     - vi. 防备（尤指金钱损失）
-    - The Bilski case involves a claimed patent on a method for <ins>**hedging** risk(对冲风险)</ins> in the energy
-      market.
+    - The Bilski case involves a *claimed([kleɪm] n. 声明)* patent on a method for <ins>**hedging** risk(对冲风险)</ins>
+      in the energy market.
 - suicide [ˈsuːɪsaɪd]
     - n. 自杀
     - commit suicide
@@ -138,7 +138,7 @@
     - She had taught him French, and he had been an **apt** student.
 - culprit [ˈkʌlprɪt]
     - n. 引起问题的人（或事物）；罪犯
-    - The police followed the clue home and finally caught the **culprit**.
+    - The police followed the clue home and finally *caught([kɔːt])* the **culprit**.
         - clue [kluː] n. 线索，提示
         - follow the clue home 顺着线索一路追查到源头（比喻用法）
     - Financial needs aren't the only **culprit/reason/cause** for the "unretirement" trend.
@@ -210,7 +210,7 @@
 - instructive [ɪnˈstrʌktɪv]
     - adj. 有启发性的
     - instruct sb. to do sth.
-- discoverer
+- discoverer [dɪˈskʌvərər]
     - n. 发现者
 
 ## Words
