--- a/english/word/low-frequency/013-018.md
+++ b/english/word/low-frequency/013-018.md
@@ -25,7 +25,7 @@
     - adv. 合作地
 - unforeseen [ˌʌnfɔːrˈsiːn]
     - adj. 意外的
-    - Do you feel *anxious([ˈæŋkʃəs])* when **unforeseen** incidents *intrude([ɪnˈtruːd])* on your day？
+    - Do you feel *anxious([ˈæŋkʃəs])* when **unforeseen** incidents *intrude([ɪnˈtruːd] vi. 侵扰)* on your day?
 - competence
     - n. 能力；胜任
     - The judge has to act within the **competence** of the court.
@@ -65,7 +65,7 @@
     - vt. 制止
 - extraction [ɪkˈstrækʃn]
     - n. 血统；取出；提炼
-- depiction
+- depiction [dɪˈpɪkʃən]
     - n. 描写
 - erect [ɪˈrekt]
     - vt. 建立
@@ -155,7 +155,7 @@
     - vt. 意指
 - modernism [ˈmɑdərnɪzəm]
     - n. 现代主义
-    - modernization n. 现代化
+    - modernization [ˌmɑːdərnəˈzeɪʃn] n. 现代化
 - unresponsive
     - adj. 无反应的
     - respond
@@ -201,7 +201,8 @@
     - == secret [ˈsiːkrət] adj. 秘密的，机密的
     - Officers had tailed the gang during a major **undercover** operation.
         - tail v. 秘密跟踪、尾随
-        - gang [ɡæŋ] n. 一伙人；帮派；团伙
+        - gang [ɡæŋ]
+            - n. 一伙人；帮派；团伙
             - a gang 犯罪团伙
 - inheritor [ɪnˈherɪtər]
     - n. 继承人
