--- a/english/word/low-frequency/019-024.md
+++ b/english/word/low-frequency/019-024.md
@@ -25,7 +25,7 @@
     - His face was barely **discernible** in the gloom.
         - barely adv. 几乎不
     - discern v. 察觉出，了解; 分辨出
-- traceable
+- traceable [ˈtreɪsəbl]
     - adj. 可追踪的
 - imperative
     - n. 重要紧急的事；当务之急
@@ -140,7 +140,7 @@
     - adj. 不经常发生的
 - substance
     - n. 物质
-- hurriedly [ˈhəɪdlɪ]
+- hurriedly [ˈhɜridlɪ]
     - adv. 匆忙地
 - blossom [ˈblɑːsəm]
     - vi. 成功发展
