--- a/english/word/low-frequency/025-030.md
+++ b/english/word/low-frequency/025-030.md
@@ -27,7 +27,7 @@
     - n. 提起诉讼者
 - visionary
     - n. 有远见卓识的人
-    - A *spirit(n. 精神)* with a vision is a dream with a mission.
+    - A *spirit(n. 精神)* with a vision is a dream with a *mission([ˈmɪʃn])*.
 - implicitly
     - adv. 含蓄的
     - implicit
@@ -63,7 +63,7 @@
         - bold
             - adj. 勇敢的
             - == courageous == brave
-    - **Boldness** — a willingness to extend yourself to the extreme, is not one that can be *acquired(vt. 获得)*
+    - **Boldness**—a willingness to extend yourself to the extreme, is not one that can be *acquired(vt. 获得)*
       overnight.
 
 ## 026
@@ -93,7 +93,7 @@
 
 - terrific [təˈrɪfɪk]
     - adj. 极好的
-    - terrible adj. 糟糕的；极度的；可怕的
+    - terrible [ˈterəbl] adj. 糟糕的；极度的；可怕的
     - We had a **terrific** start to the season, but recently we've been inconsistent.
 - disassemble [ˌdɪsəˈsɛmbəl]
     - vt. 拆卸
@@ -125,7 +125,6 @@
 
 - toil [tɔɪl]
     - vi. （长时间）苦干
-    - == handwork
     - I have nothing to offer but blood, **toil**, tears and sweat.
 - administrator
     - n. 管理人员
@@ -134,9 +133,12 @@
 - cherish [ˈtʃerɪʃ]
     - vt. 珍惜
     - == value
+        - vi. 重视；给...估价
+        - n. 价值；益处
     - **Cherish** every moment with those you love at every stage of your journey.
     - Many people search for love without success, so if you have found it, then **cherish** it and count yourself
       lucky.
+        - count yourself lucky 要意识到自己很幸运/要懂得知足/要心怀感恩
 - mindless
     - adj. 无头脑的
     - == foolish adj. 愚蠢的；荒谬的
@@ -148,7 +150,8 @@
             - == delay == hinder
     - illumination
         - n. 阐明
-        - == clarification [ˌklærəfəˈkeʃən] n. 阐明，澄清
+        - == clarification [ˌklærəfəˈkeʃən]
+            - n. 阐明，澄清
             - clarify v. 阐明
 - uncontrolled [ˌʌnkənˈtroʊld]
     - adj. 不受控制的
@@ -178,8 +181,8 @@
     - n. 盗窃罪
 - striking [ˈstraɪkɪŋ]
     - adj. 引人注目的
-    - **Striking** workers *halted(v. 使停止)* production at the auto plant yesterday.
-    - He was very **striking** but in some way I felt *repelled(v. 使厌恶; 排斥)*.
+    - **Striking** workers *halted([hɔ:ltid] v. 使停止)* production at the auto plant yesterday.
+    - He was very **striking** but in some way I felt *repelled([rɪ'peld] v. 使厌恶; 排斥)*.
 - rediscover [ˌriːdɪˈskʌvər]
     - vt. 重新发现
 - giggle [ˈɡɪɡl]
