--- a/english/word/simple-word/markdown/p12-p14.md
+++ b/english/word/simple-word/markdown/p12-p14.md
@@ -135,7 +135,7 @@
 - quite [kwaɪt]
     - adv. 相当；颇
     - quiet adj. 安静的 [ˈkwaɪət]
-    - quick
+    - quick adj. 迅速的
 - serious [ˈsɪriəs]
     - adj. 严重的；重大的；严肃的；认真的
     - 认真的，严肃的（人）
