--- a/english/word/low-frequency/031-036.md
+++ b/english/word/low-frequency/031-036.md
@@ -19,7 +19,7 @@
 
 ## 031
 
-- lump
+- lump [lʌmp]
     - vt. 把...归在一起
 - persistently
     - adv. 坚持地
@@ -30,36 +30,37 @@
             - == finish == conclude
 - embark
     - v. 着手
-    - Some forethought and preparation is necessary before you **embark** on the project.
+    - Some *forethought([ˈfɔrθɔt] n. 事先的考虑)* and preparation is necessary before you **embark** on the project.
         - embark on 从事
-- manual
+- manual [ˈmænjuəl]
     - n. 小册子
     - adj. 体力的；用手的
-- stir
+- stir [stɜːr]
     - n. 愤怒（情绪）
     - vt. 激发；搅拌
     - I've found quite a few, and—since I started posting them on Twitter—they have been causing quite a **stir**.
-- transferable
+        - quite a few 不少，相当多
+- transferable [trænsˈfɜːrəbl]
     - adj. 可转移的
-- expectancy
+- expectancy [ɪkˈspektənsi]
     - n. 预期
-- plea
+- plea [pliː]
     - n. 恳求
 - dissolve
     - v. （使）溶解
 
 ## 032
 
-- irrelevant
+- irrelevant [ɪˈreləvənt]
     - adj. 无关紧要的
 - privately
     - adv. 私下的
-- vicious 😔
+- vicious [ˈvɪʃəs] 😔
     - adj. 恶性的
-- endorse 🙂
+- endorse [ɪnˈdɔːrs] 🙂
     - vt. （正式）赞同
     - I wholeheartedly **endorse** his remarks.
-- cloak
+- cloak [kloʊk]
     - vt. 掩盖
     - n. 掩盖物；披风
     - They left under the **clock** of darkness.
@@ -68,17 +69,18 @@
 - generalist
     - n. 通才（各个领域都会）
     - In this age of **generalists**, it pays to have specific knowledge or skills.
+        - it pays to do sth. 做某事是值得的/有回报的/划算的
     - specialist
         - n. 专家
         - adj. 专业的
 - digitalized
     - adj. 数字化的
-- forecaster
+- forecaster [ˈfɔrkæstər]
     - n. 预测者
-- descend
+- descend [dɪˈsend]
     - v. 下来
     - == fall == decrease
-    - ascend
+    - ascend [əˈsend]
         - v. 上升，登高; 升职
         - == rise == increase
 
@@ -87,20 +89,20 @@
 - bypass
     - vt. 避开
     - == avoid vt. 避免；躲避
-- census
+- census [ˈsensəs]
     - n. 人口普查
 - uncover
     - vt. 发现
 - oriental
     - adj. 东方的
-- allegation
+- allegation [ˌæləˈɡeɪʃn]
     - n. 指控
-- rough
+- rough [rʌf]
     - adj. 大致的
     - The **rough** guide to marketing success used to be that you got what you paid for. 过去，市场营销成功的大略指南是“一分钱一分货”
 - bedrock
     - n. 基础
-- refusal
+- refusal [rɪˈfjuːzl]
     - n. 拒绝
 - dishonesty
     - n. 不诚实
@@ -109,37 +111,37 @@
 
 ## 034
 
-- remold
+- remold [ˌriːˈmoʊld]
     - vt. 重塑
     - == reshape v. 重塑；改组
 - clarify
     - vt. 阐明
-- approachable
+- approachable [əˈproʊtʃəbl]
     - adj. 平易近人的
     - Despite being a big star, she's very **approachable**.
-    - Opposite: formidable adj. 令人敬畏的
-        - He is very formidable; How could anybody be so brave as to offend him?
+    - Opposite: formidable [ˈfɔːrmɪdəbl] adj. 令人敬畏的
+    - He is very formidable; How could anybody be so brave as to offend him?
     - approach
         - v. 接近
         - vt. 与...接洽；处理
         - n. 方法
         - == address
-        - with sth. approaching
+        - with sth. approaching 随着某事即将到来/接近...
 - countless
     - adj. 无数的
-- inflationary
+- inflationary [ɪnˈfleɪʃəneri]
     - adj. 膨胀的
-    - inflation n. 通货膨胀（率）
-- inescapably
+    - inflation [ɪnˈfleɪʃn] n. 通货膨胀（率）
+- inescapably [ˌɪnɪ'skeɪpəblɪ]
     - adv. 不可避免的
     - escape
         - vi. 逃跑
         - vt./n. 逃避，逃离
-- analytically
+- analytically [ˌænə'lɪtɪklɪ]
     - adv. 分析地
-    - analytics n. 分析方法
+    - analytics [ˌænə'lɪtɪks] n. 分析方法
     - economics n. 经济学
-- detection
+- detection [dɪˈtekʃn]
     - n. 察觉
     - detector n. 探测器
     - detect vt. 察觉
@@ -148,23 +150,25 @@
 
 - baseless 😔
     - adj. 无根据的
-- relationally
+- relationally [ri'leiʃənəl]
     - adv. 有关系地
-    - rationally adv. 理性地
+    - rationally ['ræʃnəlɪ] adv. 理性地
 - troublesome
     - adj. 引起麻烦的
     - troublemaker n. 惹麻烦的人
     - burdensome adj. 繁重的，烦累的，难以承担的; 累赘
-- regenerative
+- regenerative [rɪˈdʒɛnəˌretɪv]
     - adj. 再生的
-    - **Regenerative** products could be a hard sell because the concept is tough to define quickly...
+    - **Regenerative** products could be a hard sell because the concept is *tough([tʌf] adj. 困难的；强硬的)* to define
+      quickly...
 - impart
     - vt. 传授
     - A good teacher knows that the duty shouldered is not just to **impart** knowledge to students; a good teacher
-      profoundly feels that the teaching work is not just to give lectures. 好的教师指导他们的职责不单是向学生灌输知识，他们深刻体会到教学工作不只是授课
-- involuntarily
+      profoundly feels that the teaching work is not just to give *lectures([ˈlektʃərs])*.
+      好的教师指导他们的职责不单是向学生灌输知识，他们深刻体会到教学工作不只是授课
+- involuntarily [ɪnˈvɑlənˌtɛrəlɪ]
     - adv. 非自愿地
-- regularity
+- regularity [ˌrɛɡjəˈlærətɪ]
     - n. 规律性
 - unjust
     - adj. 不公正的
@@ -174,17 +178,18 @@
 
 ## 036
 
-- wreck
+- wreck [rek]
     - n. 失事
-- disclosure
+- disclosure [dɪsˈkloʊʒə(r)]
     - n. 公开
 - statesman
     - n. 政治家
-- accusation
+- accusation [ˌækjuˈzeɪʃn]
     - n. 控告
-    - accuse sb. of sth. 指责某人某事
-        - == charge sb. with sth.
-- intimation
+    - 词组
+        - accuse sb. of sth. 指责某人某事
+            - == charge sb. with sth.
+- intimation [ˌɪntɪˈmeɪʃn]
     - n. 暗示
 - outset
     - n. 开始
@@ -196,13 +201,13 @@
         - at the outset 开始
             - == at/in the beginning of
         - from the outset 从一开始
-    - Decide at the **outset** what kind of learning programme you want to follow.
-    - The **onset** of hurricane season is probably not the best time to visit the beach.
-- thrill
+    - Decide at the **outset** what kind of learning *programme(n. 计划)* you want to follow.
+    - The **onset** of *hurricane([ˈhɜːrəkeɪn] n. 飓风)* season is probably not the best time to visit the beach.
+- thrill [θrɪl]
     - n. 刺激
 - passionately
     - adv. 充满热情的
-- slum
+- slum [slʌm]
     - n. 贫民窟
 - particularist
     - adj. 排他主义的
@@ -214,7 +219,7 @@
 
 - declare
     - v. 宣称; 表明; 断言; 公布; 申报; （在击球员还未全部出局时）宣布结束赛局
-- favor
+- favor [ˈfeɪvər]
     - n. 赞同，支持; 帮助; 偏袒
     - v. 更喜爱; 偏袒; 有利于; 长得像
 - soothe [suːð]
