--- a/english/word/low-frequency/043-048.md
+++ b/english/word/low-frequency/043-048.md
@@ -1,4 +1,4 @@
-# 041-048
+# 043-048
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -16,72 +16,6 @@
 - 破折号: —
 - C: Cause
 - R: Result
-
-## 041
-
-- foresight
-    - n. 先见之明
-    - Foresight is not about predicting the future,it's about minimizing surprise.
-    - They had the foresight to invest in new technology.
-    - foresighted adj. 有先见之明的
-- farsighted
-    - adj. 有远见的
-    - Harven't farsighted economists been telling us that in the future we will work less,not more?
-- measurable
-    - adj. 显著的
-- multiply
-    - v. 乘
-    - multiply...by...
-- powerhouse
-    - n. 强大的集团（或组织）
-    - China has been described as an emerging economic powerhouse. 中国被称为崛起中的经济强国。
-- adherence
-    - n. 坚持
-    - adherence to
-    - His rigid adherence to the rules made him unpopular.
-- removal
-    - n. 拿走
-- fuss
-    - vi. 过分关心（小事）
-    - fuss over
-    - It was all a fuss about nothing.这完全是无谓的自寻烦恼
-    - Do all the good you can and make as little fuss about it as possible.
-- tissue
-    - n. （人或动物细胞的）组织
-
-## 042
-
-- irritate
-    - vt. 使激怒
-    - Her uncritical acceptance of everything I said began to irritate me.
-- clumsy
-    - adj. 笨拙的
-- perplex
-    - vt. 使困惑
-    - perplexed == confused == puzzled
-- dubious
-    - adj. 怀疑的
-    - The <ins>testimony (证据，证词)</ins> given by him is dubious.
-    - == doubtful
-- copyright
-    - n. 版权
-- tragic [ˈtrædʒɪk]
-    - adj. 悲惨的
-    - The crash of EgyptAir Flight 804, which terrorists may have downed over the Mediterranean Sea, provides another
-      **tragic** reminder of why.
-    - tragedy n. 悲剧
-    - comedy n. 喜剧
-- plug
-    - vt. 填塞
-    - plug into 接通电源；把插头插进插座
-- messy
-    - adj. 凌乱的
-- unintentional
-    - adj. 不是故意的
-- affectionate
-    - adj. 充满爱意的
-    - affection n. 爱意
-        - deep affection
 
 ## 043
 
@@ -234,3 +168,9 @@
     - n. 研讨会
 - termination
     - n. 终止
+
+## Words
+
+## 词组
+
+## 句式
