--- a/english/word/low-frequency/089-096.md
+++ b/english/word/low-frequency/089-096.md
@@ -219,3 +219,9 @@
 - bribe
     - vt. 贿赂
 - I am writing to recommend the Forbidden City，every brick and tile of which embodies the craftsmanship spirit of our country. 我写信是为了推荐故宫，故宫里的一砖一瓦都体现了我们国家的工匠精神。
+
+## Words
+
+## 词组
+
+## 句式
