--- a/english/word/simple-word/markdown/p55-p58.md
+++ b/english/word/simple-word/markdown/p55-p58.md
@@ -226,9 +226,9 @@
         - 妻子(wife)拿刀(knife)去砍狼(wolf)，小偷(thief)见了心发慌；躲在架(shelf)下保己(self)命，半(half)片树叶(leaf)遮目光
 - waterfall
     - n. 瀑布
-- **ethic**
+- ethic
     - n. 道德，伦理 = morality
-    - **ethnic** n. 种族
+    - ethnic adj. 种族的
 - suite
     - n. 套房，一套家具
     - suit 套装
