--- a/english/word/low-frequency/031-036.md
+++ b/english/word/low-frequency/031-036.md
@@ -104,7 +104,7 @@
     - n. 基础
 - refusal [rɪˈfjuːzl]
     - n. 拒绝
-- dishonesty
+- dishonesty [dɪsˈɑnɪsti]
     - n. 不诚实
 - explainable
     - adj. 可说明的
@@ -120,7 +120,7 @@
     - adj. 平易近人的
     - Despite being a big star, she's very **approachable**.
     - Opposite: formidable [ˈfɔːrmɪdəbl] adj. 令人敬畏的
-    - He is very formidable; How could anybody be so brave as to offend him?
+        - He is very **formidable**; How could anybody be so brave as to offend him?
     - approach
         - v. 接近
         - vt. 与...接洽；处理
@@ -229,4 +229,4 @@
 
 ## 句式
 
-- Like is like a garden, you reap what you sow.
+- Life is like a garden, you reap what you sow.
