--- a/english/word/low-frequency/037-042.md
+++ b/english/word/low-frequency/037-042.md
@@ -19,16 +19,19 @@
 
 ## 037
 
-- debut
-    - n.（演员等的）初测登场
+- debut [deɪˈbjuː]
+    - n.（演员等的）初次登场
     - She is hopping her US **debut** will be the first step on the road to <ins>fame and fortune(名利双收)</ins>.
-- depredation
+        - fortune [ˈfɔːrtʃən] n. 大笔的钱（可数）；命运（不可数）
+- depredation [ˌdɛprɪˈdeʃən]
     - n. 掠夺
     - Much of the region's environmental **depredation** is a result of poor planning.
 - insightful
     - adj. 富有洞察力的
-    - Reflective thinking turns experience into insight.
-- hostage
+    - insight
+        - n. 领悟；洞察力
+        - Reflective thinking turns experience into **insight**.
+- hostage [ˈhɑːstɪdʒ]
     - n. 人质
 - visibly
     - adv. 明显地
@@ -36,34 +39,34 @@
     - n. 回避
 - undergo
     - vt. 经历
-- scary
+- scary [ˈskeri]
     - adj. （事物）可怕的
 - conquer [ˈkɑːŋkər]
     - vt. 征服
-    - == overcome == defeat
+    - == overcome vt. 战胜，克服 == defeat v. 击败
     - He who **conquers** others is strong; He who **conquers** himself is mighty.
-- whisper
+- whisper [ˈwɪspər]
     - v. 低语
 
 ## 038
 
-- ethnic
+- ethnic [ˈeθnɪk]
     - adj. 种族的
-    - ethnicity n. 民族
-    - ethical
+    - ethnicity [eθˈnɪsəti] n. 民族
+    - ethical [ˈeθɪkl]
         - adj. 道德的；伦理的；合乎情理的
         - ethic n. 道德，伦理
-- advantageous
+- advantageous [ˌædvənˈteɪdʒəs]
     - adj. 有利的
-- informal
+- informal [ɪnˈfɔːrml]
     - adj. 非正式的
-    - informality n. 非正式
-- humiliating
+    - informality [ˌɪnfɔrˈmælɪti] n. 非正式
+- humiliating [hju'mɪlɪeɪtɪŋ]
     - adj. 蒙羞的
-    - humiliation
+    - humiliation [hjuˌmɪliˈeʃən]
         - n. 耻辱
         - == disgrace [dɪsˈɡreɪs] n. 耻辱；丢脸的人（或事）
-- exquisitely adv. 敏锐地
+- exquisitely [ɛkˈskwɪzɪtlɪ] adv. 敏锐地
 - programmer
     - n. 计算机程序设计员
     - program
@@ -80,55 +83,60 @@
         - n. 反应过度
         - Scientists have found that although we are prone to snap **overreactions**, if we take a moment and think
           about how we are likely to react, we can reduce or event eliminate the negative effects of our quick,
-          hard-wired responses.
+          *hard-wired([hɑːrd ˈwaɪərd])* responses.
+            - snap adj. 匆忙的
+            - prone [proʊn]
+                - adj. 有做（坏事）的倾向的；(-prone)有...倾向的
+                - be prone to noun/doing sth 有...的倾向/容易...
         - Think before you act; think twice before you speak.
 - inventiveness
     - n. 创造性
 - counterintuitive
     - adj. 违反直觉的
-- evaporate
+- evaporate [ɪˈvæpəreɪt]
     - v. 逐渐消失
     - == disappear == fade
-- charitably
+- charitably ['tʃærətəblɪ]
     - adv. 慈善地
-- conveyor
+- conveyor [kənˈveɚ]
     - n. 传送带
-- crushingly
+- crushingly ['krʌʃɪŋlɪ]
     - adv. 非常地
-- colonist
+- colonist [ˈkɑːlənɪst]
     - n. 殖民地定居者
-    - colonialism n. 殖民主义
+    - colonialism [kəˈloʊniəlɪzəm] n. 殖民主义
 
 ## 040
 
 - compensatory
     - adj. 补偿性的
-- variously
+- variously [ˈveriəsli]
     - adv. 不同的
     - various adj. 各种各样的
 - classist
     - n. 有阶级偏见的人
-- finite
+- finite [ˈfaɪnaɪt]
     - adj. 有限的
-    - infinite adj. 无限的，无穷的; 极大的，极多的
-- geographical
+    - infinite [ˈɪnfɪnət] adj. 无限的，无穷的; 极大的，极多的
+- geographical [ˌdʒiːəˈɡræfɪkl]
     - adj. 地理的
-- antique
+- antique [ænˈtiːk]
     - adj. (家具、珠宝等)古董的
-- framer
+- framer ['freɪmə]
     - n. 制定者
 - recount
     - vt. 叙述
 - untested
     - adj. 未经实验（或考验）的
-    - The supposed importance of influentials derives from a plausible-sounding but largely **untested** theory called
-      the "two step flow of communication."
+    - The *supposed(adj. 假定的；所谓的)* importance of influentials derives from a plausible-sounding but largely
+      **untested** theory called the "two step flow of communication."
+        - plausible [ˈplɔːzəbl] adj. 貌似合理的；可信的
 - indulgent
     - adj. 纵容的
 
 ## 041
 
-- foresight
+- foresight [ˈfɔːrsaɪt]
     - n. 先见之明
     - **Foresight** is not about predicting the future, it's about minimizing surprise.
     - They had the **foresight** to invest in new technology.
@@ -136,7 +144,7 @@
 - farsighted
     - adj. 有远见的
     - Haven't **farsighted** economists been telling us that in the future we will work less, not more?
-- measurable
+- measurable [ˈmeʒərəbl]
     - adj. 显著的
 - multiply
     - v. 乘
@@ -144,38 +152,40 @@
 - powerhouse
     - n. 强大的集团（或组织）
     - China has been described as an emerging economic **powerhouse**. 中国被称为崛起中的经济强国
-- adherence
+        - emerge [iˈmɜːrdʒ] v. 浮现；出现；显露
+- adherence [ədˈhɪrəns]
     - n. 坚持
     - adhere [ədˈhɪr]
         - vi. 遵守
         - adhere/cling to (doing) sth.
     - His rigid **adherence** to the rules made him unpopular.
         - adherence to
-- removal
+        - rigid [ˈrɪdʒɪd] adj. 过于严格的；死板的
+- removal [rɪˈmuːvl]
     - n. 拿走
 - fuss
     - vi. 过分关心（小事）
     - fuss over
     - It was all a **fuss** about nothing. 这完全是无谓的自寻烦恼
-    - Do all the good you can and make as little **fuss** about it as possible.
-- tissue
+    - Do all the good you can and make as little **fuss** about it as possible. 尽你所能去行善，但尽量不要张扬
+- tissue [ˈtɪʃuː]
     - n. （人或动物细胞的）组织
 
 ## 042
 
-- irritate
+- irritate [ˈɪrɪteɪt]
     - vt. 使激怒
     - Her uncritical acceptance of everything I said began to **irritate** me.
-- clumsy
+- clumsy [ˈklʌmzi]
     - adj. 笨拙的
-- perplex
+- perplex [pərˈpleks]
     - vt. 使困惑
     - perplexed
         - adj. 困惑的
-        - == confused == puzzled
-- dubious
+        - == confused adj. 混乱的；困惑的 == puzzled
+- dubious [ˈduːbiəs]
     - adj. 怀疑的
-    - == doubtful
+    - == doubtful adj. 拿不定主意的，不确定的；怀疑的
     - The *testimony([ˈtestɪmoʊni] n. 证据，证词)* given by him is **dubious**.
 - copyright
     - n. 版权
@@ -185,15 +195,15 @@
       **tragic** reminder of why.
     - tragedy n. 悲剧
     - comedy n. 喜剧
-- plug
+- plug [plʌɡ]
     - vt. 填塞
     - plug into 接通电源；把插头插进插座
-- messy
+- messy [ˈmesi]
     - adj. 凌乱的
 - unintentional
     - adj. 不是故意的
     - intentional adj. 有意的，故意的
-- affectionate
+- affectionate [əˈfekʃənət]
     - adj. 充满爱意的
     - affection
         - n. 喜爱，爱慕之情
@@ -201,7 +211,7 @@
 
 ## Words
 
-- fragile
+- fragile [ˈfrædʒl]
     - adj. 脆弱的; 易碎的; 精巧的; 虚弱的
 
 ## 词组
