--- a/english/word/simple-word/markdown/p55-p58.md
+++ b/english/word/simple-word/markdown/p55-p58.md
@@ -175,9 +175,9 @@
     - adv. 轻柔地
 - keyboard
     - n. 键盘
-- **affection**
+- affection
     - n. 喜爱，爱慕之情
-    - **affect** v. 影响；深深打动
+    - affect v. 影响；深深打动
     - effect n. 影响
 - anniversary
     - n. 周年纪念
