--- a/english/word/low-frequency/043-048.md
+++ b/english/word/low-frequency/043-048.md
@@ -23,7 +23,7 @@
     - n. 乌托邦
 - deprivation
     - n. 缺少
-    - Millions more suffer from serious sleep deprivation caused by long work hours.
+    - Millions more suffer from serious sleep **deprivation** caused by long work hours.
 - athletic
     - adj. 体育运动的
 - unfunded
@@ -32,12 +32,13 @@
     - adv. 抽象地
 - casualness
     - n. 漫不经心
-    - She introduced herself with studied casualness. 她故作轻松的做了个自我介绍。
+    - She introduced herself with studied **casualness**. 她故作轻松的做了个自我介绍。
         - studied adj. 刻意的；装模作样的
+        - studied casualness 故作轻松
     - casual adj. 随意的
 - causality
     - n. 因果关系
-    - This dose not prove causality.
+    - This does not prove **causality**.
     - cause v. 导致
 - correspondent
     - n. 通讯员
@@ -54,22 +55,27 @@
     - n. 一致性
 - despise
     - vt. 鄙视
-    - I despise such people：they've no character.
+    - I **despise** such people: they've no character.
 - timber
     - n. 木材
 - offset
     - vt. 抵消
+    - The moderation in food prices helped to **offset** the first increase in energy prices.
 - inventory
     - n. 存货
 - layout
     - n. 版面设计
 - objectively
     - adv. 在客观上
-    - objective n. 目标；adj. 客观的
+    - objective
+        - n. 目标
+        - adj. 客观的
 - triviality
     - n. 琐事
+    - trivial [ˈtrɪviəl] adj. 不重要的，琐碎的
 - extinct
     - adj. 灭绝的
+    - endangered adj. （物种）濒危的
 
 ## 045
 
@@ -78,7 +84,11 @@
 - marital
     - adj. 婚姻的
 - affiliated
-    - adj. 隶属的
+    - adj. 隶属的；附属的
+    - ...worried that the cable and phone companies selling broadband connections had the power and incentive to favor
+      **affiliated** websites over their rivals'.
+        - favor A over B 更偏向 A，而不是 B/更青睐 A 胜过 B
+        - rival [ˈraɪvl] n. 竞争对手
     - affiliation n. 附属机构
 - gossip
     - n. 闲言碎语
@@ -86,7 +96,7 @@
     - n. 副手
 - drain
     - n. 外流
-    - This "<ins>brain drain (人才流失)</ins>" has long bithered policymakers in poor countries.
+    - This "<ins>brain **drain**(人才流失)</ins>" has long bothered policymakers in poor countries.
 - mispredict
     - vt. 错误预测
 - willingness
@@ -125,16 +135,17 @@
 - mayoral
     - adj. 市长的
 - seal
-    - n. 印章
-    - Herewith we are sending you a written contract under seal in two copies.
-    - I looked upon The gift as a seal on our friendship. 见证
+    - vt. 盖章；密封
+    - n. 印章；封条
+    - Herewith we are sending you a written contract under **seal** in two copies.
+    - I looked upon the gift as a **seal** on our friendship.
 - convict
     - vt. 宣判...有罪
 - diversify
     - v. 使多样化
 - pensioner
     - n. 领取养老金的人
-- specialize/ise
+- specialize
     - vi. 专门研究（或从事）
     - speciality n. 专长
     - specialization n. 专门化
@@ -143,25 +154,26 @@
 
 - identical
     - adj. 完全相同的
-    - The two pictures are similar，although not identical.
-    - == The same
+    - == the same
+    - The two pictures are similar, although not **identical**.
 - omission
     - n. 疏忽
-- vacal
+- vocal
     - adj. 大声表达的
 - soften
     - v. 使缓和
-    - Airbags are designed to soften the impact of a car crash.
+    - Airbags are designed to **soften** the impact of a car crash.
 - deletion
     - n. 删除
 - contingent
     - adj. 依情况而定的
-    - == dependent
+    - == dependent adj. 依赖的；取决于...的
+    - Uh, what if we say it's **contingent**?
 - spite
     - n. 恶意
     - in spite of 尽管
-    - In spite of his age，he still leads an active life.
-    - She did it <ins>out of spite. (出于恶意)</ins>
+    - In **spite** of his age, he still leads an active life.
+    - She did it <ins>out of spite(出于恶意)</ins>.
 - corruptive
     - adj. 腐败的
 - seminar
@@ -170,6 +182,21 @@
     - n. 终止
 
 ## Words
+
+- bluff [blʌf]
+    - v. 欺骗，吓唬; 虚张声势
+    - n. 欺骗，误导; 峭壁
+    - adj. 坦率的; 直言的
+- vary [ˈveri]
+    - vt. 改变
+    - vi. 变化
+- indifferent
+    - adj. 漠不关心的
+- convince [kənˈvɪns]
+    - vt. 说服
+- implicit [ɪmˈplɪsɪt]
+    - adj. 不直接言明的；内含的
+    - explicit [ɪkˈsplɪsɪt] adj. 明确的
 
 ## 词组
 
