--- a/math/advanced-mathematics/single-variable_differential_calculus/concept.tex
+++ b/math/advanced-mathematics/single-variable_differential_calculus/concept.tex
@@ -91,13 +91,30 @@
             \item $f'(x_0) = A$（$A$为有限数）。
         \end{itemize}
         \item $\color{red}{\bigstar}$ 函数在一点可导的充要条件: $f'(x_0)$存在 $\Leftrightarrow$ 其左导数$f'_-(x_0)$与右导数$f'_+(x_0)$均存在且相等
-        \item 函数在一点可导的必要条件: 若$f(x)$在一点可导 $\Rightarrow$ $f(x)$在该点连续
+        \item 函数在一点可导的必要条件: \textbf{若$f(x)$在一点可导 $\Rightarrow$ $f(x)$在该点连续}，反之未必
         \item 导数的性质
         \begin{itemize}
-            \item $\color{red}{\bigstar}$求导一次，奇偶性互换
-            \item 若$f(x)$是可导的周期为$T$的周期函数，则$f'(x)$也是以$T$为周期的周期函数
+            \item $\color{red}{\bigstar}$求导一次，奇偶性互换（导数定义）
+            \item 若$f(x)$是可导的周期为$T$的周期函数，则$f'(x)$也是以$T$为周期的周期函数（导数定义）
             \item 若$f'(x) > 0$，$f(x)$单调递增；若$f'(x) < 0$，则$f(x)$单调递减
         \end{itemize}
+    \end{enumerate}
+
+    \subsection{导数的几何意义}
+
+    \begin{enumerate}
+        \item 函数 $y=f(x)$ 在点 $x_0$ 处的导数值 $f'(x_0)$，就是曲线 $y=f(x)$ 在点 $(x_0,\,y_0)$处切线的斜率 $k$，即 $k = f'(x_0)$，因此，曲线 $y=f(x)$ 在点 $(x_0,\,y_0)$ 处的切线方程为
+        \[
+            y - y_0 = f'(x_0)\,(x - x_0).
+        \]
+
+        该点处的法线方程为
+        \[
+            y - y_0 = -\frac{1}{f'(x_0)}\,(x - x_0) \; (f'(x_0) \neq 0)
+        \]
+        \item 切线存在不代表导数存在，但导数存在切线一定存在
+        \item 若 $f_+'(x_0) \neq f_-'(x_0)$ 即在点 $x_0$ 处出现角点（或尖点），则函数 $f(x)$ 在 $x_0$ 处不可导，且不存在切线
+        \item 若函数 $f(x)$ 在点 $x_0$ 处具有无穷导数，则该点处存在切线，但导数不存在
     \end{enumerate}
 
     \subsection{基础概念}
@@ -108,6 +125,48 @@
     \subsection{结论}
 
     \begin{enumerate}
+        \item 若函数 $\varphi(x)$ 在 $x=x_0$ 处连续，则函数$f(x)=|x-x_0|\,\varphi(x)$在 $x=x_0$ 处可导的充要条件是 $\varphi(x_0)=0$
+        \item \item 函数 $f(x)$ 与 $|f(x)|$ 的连续性与可导性关系总结：
+        \begin{item}
+            \item 若 $f(x)$ 在 $x_0$ 处连续，则 $|f(x)|$ 在 $x_0$ 处连续； 反之不成立。
+            \item 若 $f(x)$ 在 $x_0$ 处可导，则：
+            \begin{enumerate}[label=(\alph*)]
+                \item 若 $f(x_0) \neq 0$，则 $|f(x)|$ 在 $x_0$ 处{\color{red}{可导}}，且
+                \[
+                    \left.|\,|f(x)|\,\right.'\right|_{x=x_0}
+                    =
+                    \begin{cases}
+                        f'(x_0), & f(x_0) > 0, \\
+                        -f'(x_0), & f(x_0) < 0.
+                    \end{cases}
+                \]
+
+                \item 若 $f(x_0) = 0$，则：
+                \[
+                    \begin{cases}
+                        f'(x_0) = 0
+                        \;\Rightarrow\;
+                        |f(x)| \text{ 在 } x_0 \text{ 处可导，且 }
+                        \left.|\,|f(x)|\,\right.'\right|_{x=x_0} = 0, \\[0.5em]
+                        f'(x_0) \neq 0
+                        \;\Rightarrow\;
+                        |f(x)| \text{ 在 } x_0 \text{ 处{\color{red}{不可导}}}.
+                    \end{cases}
+                \]
+                \item 总结不可导即:
+                \[
+                    \left.
+                    \begin{aligned}
+                        & f(x) \text{ 在 } x_0 \text{ 处可导} \\
+                        & f(x_0) = 0 \\
+                        & f'(x_0) \neq 0
+                    \end{aligned}
+                    \right\}
+                    \;\Longrightarrow\;
+                    |f(x)| \text{ 在 } x_0 \text{ 处 {\color{red}{不可导}}}
+                \]
+            \end{enumerate}
+        \end{item}
     \end{enumerate}
 
     \subsection{定理}
@@ -124,7 +183,7 @@
     \subsection{公式}
 
     \begin{enumerate}
-
+        \item $[(e^x - 1)g(x)]' = e^xg(x) + (e^x - 1)g'(x)$
     \end{enumerate}
 
     \subsection{方法总结}
@@ -142,6 +201,89 @@
     \subsection{理解}
 
     \begin{enumerate}
+        \item 对于连续或可导函数，只要$f(x) > 0$（或$f(x) < 0$），无论$f(x_0)$与$0$的距离有多小，它旁边相依相偎的$f(x)$一定$> 0$（或$< 0$）
+        \item 设 $f(x)$ 在 $x=0$ 的某邻域内有定义，且 $|f(x)| \le 1-\cos x$，证明 $f(x)$ 在 $x=0$ 处连续、可导且 $f'(0)=0$
+        \begin{analysisbox}[经典]
+            \textbf{证明：} 分三个层次完成。
+
+            \medskip
+            \textcolor{analysisTitleColor}{\textbf{（1）求函数极限}}
+
+            由
+            \[
+                0 \le |f(x)| \le 1-\cos x,
+                \qquad
+                \lim_{x\to 0}(1-\cos x)=0,
+            \]
+            根据夹逼准则，有
+            \[
+                \lim_{x\to 0}|f(x)| = 0
+                \quad\Rightarrow\quad
+                \lim_{x\to 0}f(x) = 0.
+            \]
+
+            \medskip
+            \textcolor{analysisTitleColor}{\textbf{（2）求函数值，验证连续性}}
+
+            在原不等式中令 $x=0$，得
+            \[
+                |f(0)| \le 1-\cos 0 = 0,
+            \]
+            故 $f(0)=0$。
+
+            因此
+            \[
+                \lim_{x\to 0}f(x) = f(0),
+            \]
+            即 $f(x)$ 在 $x=0$ 处连续，并且有
+            \[
+                |f(x)-f(0)| = |f(x)| \le 1-\cos x.
+            \]
+
+            \medskip
+            \textcolor{analysisTitleColor}{\textbf{（3）求导数（按定义）}}
+
+            由上述不等式可得
+            \[
+                0 \le
+                \left|
+                \frac{f(x)-f(0)}{x-0}
+                \right|
+                \le
+                \frac{1-\cos x}{|x|}.
+            \]
+
+            又因为
+            \[
+                \lim_{x\to 0}\frac{1-\cos x}{|x|}
+                =
+                \lim_{x\to 0}\frac{\frac{1}{2}x^2}{|x|}
+                =0,
+            \]
+            再次由夹逼准则，
+            \[
+                \lim_{x\to 0}
+                \left|
+                \frac{f(x)-f(0)}{x-0}
+                \right|
+                =0,
+            \]
+            即
+            \[
+                \lim_{x\to 0}
+                \frac{f(x)-f(0)}{x-0}
+                =0,
+            \]
+            从而 $f'(0)=0$。
+
+            \medskip
+            \textbf{综上，}
+            $f(x)$ 在 $x=0$ 处连续、可导，且 $f'(0)=0$。$\square$
+
+        \end{analysisbox}
+
+        \item
     \end{enumerate}
+
 
 \end{document}
