--- a/english/word/low-frequency/019-024.md
+++ b/english/word/low-frequency/019-024.md
@@ -105,8 +105,8 @@
     - ...provoked justified **outrage** in Vermont last week when it announced it was dishonoring a longstanding
       commitment.
     - Do not go gentle into that good night, Old age should burn and rave at close of day; **Rage**, **rage** against
-      the dying of the light. — 狄兰·托马斯（Dylan Thomas）《Do not go gentle into that good night》
-      不要温顺地走向死亡。人在生命将尽之时，仍应燃烧、呐喊，而非安静接受。愤怒吧，愤怒地反抗生命之光的消逝。
+      the dying of the light. — Dylan Thomas《Do not go gentle into that good night》
+      不要温顺地走向死亡。人在生命将尽之时，仍应燃烧、呐喊，而非安静接受。愤怒吧，愤怒地反抗生命之光的消逝 - 狄兰·托马斯
 
 ## 022
 
