--- a/english/word/low-frequency/025-030.md
+++ b/english/word/low-frequency/025-030.md
@@ -29,7 +29,7 @@
     - n. 有远见卓识的人
     - A *spirit(n. 精神)* with a vision is a dream with a *mission([ˈmɪʃn])*.
 - implicitly
-    - adv. 含蓄的
+    - adv. 含蓄地
     - implicit
         - adj. 不直接言明的；内含的
         - == indirect == unclear
@@ -100,7 +100,7 @@
     - assemble v. 集合；收集
 - beam [biːm]
     - vi. 绽放笑容
-    - beaming + n.（face/smile/eyes）
+    - beaming + noun（face/smile/eyes）
     - With **beaming** eyes, the child looked at the kind gentleman who had always been so good to her.
 - strip [strɪp]
     - vt. 剥去
@@ -150,9 +150,8 @@
             - == delay == hinder
     - illumination
         - n. 阐明
-        - == clarification [ˌklærəfəˈkeʃən]
-            - n. 阐明，澄清
-            - clarify v. 阐明
+        - == clarification [ˌklærəfəˈkeʃən] n. 阐明，澄清
+        - clarify v. 阐明
 - uncontrolled [ˌʌnkənˈtroʊld]
     - adj. 不受控制的
     - controllable [kənˈtroʊləbl] adj. 可控制的
@@ -168,6 +167,7 @@
     - Statistics **permeate** modern life.
 - grader ['ɡreɪdər]
     - n. ...年级的学生
+    - 
 - appraisal [əˈpreɪzl]
     - n. 评估
     - staff appraisal 员工评估体系
@@ -199,14 +199,14 @@
 - wilderness [ˈwɪldərnəs]
     - n. 荒野
 - spectacle [ˈspektəkl]
-    - n. [pl.]眼镜；奇观；精彩的表演
+    - n. (pl.)眼镜；奇观；精彩的表演
 - intellectualize [ˌɪntlˈɛktʃuəˌlaɪz]
-    - 使理智化
+    - vt. 使理智化
 - applaud [əˈplɔːd]
     - vt. 称赞
 - terror [ˈterər]
     - n. 恐怖主义
-    - terrorism [ˈtɛrəˌrɪzəm] n 恐怖主义
+    - terrorism [ˈtɛrəˌrɪzəm] n. 恐怖主义
     - terrorist
         - n. 恐怖主义者
         - The crash of EgyptAir Flight 804, which **terrorists** may have downed over the Mediterranean Sea, provides
