fix: parse multi file
1. 019-024
2. 025-030
3. 001-006
4. 037-042

--- a/english/word/low-frequency/001-006.md
+++ b/english/word/low-frequency/001-006.md
@@ -155,8 +155,8 @@
     - adv. 顽固地
 - landmark
     - n. 里程碑
-    - In the **landmark** 1975 decision Taylor v. Louisiana, the Supreme Court extended the requirement that juries be
-      representative of all parts of the community to the state level.
+    - In a **landmark** 1975 Supreme Court case involving Taylor and the state of Louisiana, the Court extended the
+      requirement that juries be representative of all parts of the community to the state level.
         - extend A to B 延伸到
 - formative [ˈfɔːrmətɪv]
     - adj. 对成长有深远影响的
