--- a/english/word/low-frequency/037-042.md
+++ b/english/word/low-frequency/037-042.md
@@ -43,7 +43,8 @@
     - adj. （事物）可怕的
 - conquer [ˈkɑːŋkər]
     - vt. 征服
-    - == overcome vt. 战胜，克服 == defeat v. 击败
+    - == overcome vt. 战胜，克服
+    - == defeat v. 击败
     - He who **conquers** others is strong; He who **conquers** himself is mighty.
 - whisper [ˈwɪspər]
     - v. 低语
@@ -111,7 +112,7 @@
 - compensatory
     - adj. 补偿性的
 - variously [ˈveriəsli]
-    - adv. 不同的
+    - adv. 不同地
     - various adj. 各种各样的
 - classist
     - n. 有阶级偏见的人
